# spacy_crfsuite

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
examples/: 01 - Custom Component.ipynb  02 - CoNLL 2003.ipynb  crf.pkl  default-config.json  example.ipynb  example.py  model.pkl
examples/data/: config.json  example.md
spacy_crfsuite/: __init__.py  about.py  bilou.py  compat.py  conll.py  constants.py  crf_extractor.py  dataset.py  dense_features.py  eval.py  features.py  markdown.py  serve.py  tokenizer.py  train.py  trainer.py  utils.py  visualize.py
tests/: conftest.py  test_conll.py  test_dense_features.py  test_example.py  test_hyperopt.py  test_markdown.py  test_tokenizer.py
